updated versions, some minor refactoring